welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
     	avance();
              ^SlugTracking:28: error: type mismatch;
 found   : Unit
 required: Boolean
     if(getCouleurSol()==Color.green){
     ^