welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
     avance();
     if(getCouleurSol()==Color.green){
     	recule();
     	baisseBrosse();
     	leveBrosse();
     	return true;
     	avance();
     	
     }else{
     	recule();
     	gauche();
     	avance();
     if(getCouleurSol()==Color.green){
     	recule();
     	baisseBrosse();
     	leveBrosse();
     	avance();
     	return true;
     }else{
     	recule();
     	droite();
     	droite();
     	avance();
     	avance();
     	 avance();
     if(getCouleurSol()==Color.green){
     	recule();
     	baisseBrosse();
     	leveBrosse();
     	avance();
     	return true ;
     	
     }
}
     }
}
